# reduct-plotjuggler

./: .gitignore  CMakeLists.txt  README.md
example/: requirement.txt  ros_demo.ipynb
include/: common.h  data_structures.h  utilities.h
src/: buckets_browse.cc  extract_csv_accx_gt10.cc  extract_images_save.cc  extract_json_accz_lt_neg5.cc  extract_mcap_ros_topic.cc  extract_pointcloud2.cc
